--- a/header.html
+++ b/header.html
@@ -3,12 +3,6 @@
     demo of header
   </title>
   <body>
-    <h1>
-      HIGH
-    </h1>
-    <hr>
-    <main>
-        hi again
-    </main>
+     Ido paz
   </body>
 </html>
